--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,16 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+  //   "paths": {
+  //     "@services/*": ["src/app/services/*"],
+  //     "@interfaces/*": ["src/app/commons/interfaces/*"],
+  //     "@assets/*": ["src/assets/*"],
+  //     "@ag-grid/*": ["src/app/ag-grid/*"],
+  //     "@environments/*": ["src/environments/*"],
+  //     "@appTypes/*": ["src/app/commons/types/*"],
+  //     "@utils/*": ["src/app/commons/util/*"],
+  //     "@app/*": ["src/app/*"]
+  // },
     "lib": [
       "ES2022",
       "dom"
